prima-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prima-api-service
spec:
  selector:
    app: prima-api-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000  # Should match the container port
      nodePort: 30000  # Choose a port between 30000-32767
  type: NodePort
