prima-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prima-api-ingress
spec:
  rules:
  - host: prima-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prima-api-service
            port:
              number: 5000
